[gd_scene load_steps=3 format=2]

[ext_resource path="res://entities/button_controls.gd" type="Script" id=1]
[ext_resource path="res://assets/controls/button_question_normal.png" type="Texture" id=2]

[node name="ButtonControls" type="Control"]
unique_name_in_owner = true
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="EntityInfo" type="PanelContainer" parent="."]
margin_left = -8.0
margin_top = -72.0
margin_right = 72.0
margin_bottom = -48.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = "tooltipbackground"
__meta__ = {
"_edit_group_": true
}

[node name="MarginContainer" type="MarginContainer" parent="EntityInfo"]
margin_left = 2.0
margin_top = 2.0
margin_right = 78.0
margin_bottom = 22.0
mouse_filter = 2
custom_constants/margin_right = 6
custom_constants/margin_top = 2
custom_constants/margin_left = 6
custom_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="EntityInfo/MarginContainer"]
margin_left = 6.0
margin_top = 2.0
margin_right = 70.0
margin_bottom = 18.0
mouse_filter = 2
alignment = 1

[node name="Label" type="Label" parent="EntityInfo/MarginContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 42.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 0.905882, 0.839216, 1 )
text = "Platelet"

[node name="MoreInfoRect" type="TextureRect" parent="EntityInfo/MarginContainer/HBoxContainer"]
margin_left = 46.0
margin_right = 64.0
margin_bottom = 16.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="MoveButton" type="Button" parent="."]
unique_name_in_owner = true
margin_top = -32.0
margin_right = 64.0
margin_bottom = 2.0
text = "MOVE"

[node name="ActivateButton" type="Button" parent="."]
unique_name_in_owner = true
margin_top = 64.0
margin_right = 64.0
margin_bottom = 96.0
text = "ACTIVATE"
icon_align = 1
expand_icon = true

[node name="ConnectButton" type="Button" parent="."]
unique_name_in_owner = true
margin_left = -80.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 48.0
text = "CONNECT"
icon_align = 1
expand_icon = true

[node name="UpgradeButton" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 80.0
margin_top = 16.0
margin_right = 144.0
margin_bottom = 48.0
text = "UPGRADE"
icon_align = 1
expand_icon = true

[connection signal="pressed" from="MoveButton" to="." method="_on_MoveButton_pressed"]
[connection signal="pressed" from="ActivateButton" to="." method="_on_ActivateButton_pressed"]
